config file changed, location and units added to weather

--- a/renderer/active.html
+++ b/renderer/active.html
@@ -13,6 +13,12 @@
 		</div>
 		<div>
 			<div id="footer">
+					<form>
+							Location:<br>
+							<input type="text" id="location_form"><br>
+							in Celsius (default Fahrenheit)?
+							<input type="checkbox" id="units_form">
+						  </form>
 			<button onclick="getWeather()" name="weather" value="weather">
 				WEATHER ON
 			</button>
