--- a/renderer/active.html
+++ b/renderer/active.html
@@ -3,39 +3,42 @@
 	<link rel="stylesheet" type="text/css" href="active.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
-<body onload="dateTime()">
+<body onload="dateTime(),getWeather()">
 	<div class="wrapper">
-		<div>
+		<div class="sidebar" id="left">
+				<link id="left_css" rel="stylesheet" type="text/css" href="">
+		</div>
+		<div id="body">
 			<div class="header" id="clock"></div>
-		</div>
-		<div class="content" id="content">
-			<link id="content_css" rel="stylesheet" type="text/css" href="">
-		</div>
-		<div>
+			<div id="content">
+				<link id="content_css" rel="stylesheet" type="text/css" href="">
+			</div>
 			<div id="footer">
 					<form>
-							Location:<br>
-							<input type="text" id="location_form"><br>
-							in Celsius (default Fahrenheit)?
-							<input type="checkbox" id="units_form">
-						  </form>
-			<button onclick="getWeather()" name="weather" value="weather">
-				WEATHER ON
-			</button>
-			<button onclick="weatherForecast()" name="forecast" value="forecast">
-				Forecast
-			</button>
-			<button onclick="getMenu()" name="menu" value="menu">
-				Cantina Menu
-			</button>
-			<button onclick="manageDOM.clearContent()" name="woff" value="woff">
-				WEATHER OFF
-			</button>
-			<button onclick="ftGetObj()" name="student" value="student">
-				GET ME
-			</button>
+						Location:<br>
+						<input type="text" id="location_form"><br>
+						in Celsius (default Fahrenheit)?
+						<input type="checkbox" id="units_form">
+					</form>
+				<button onclick="getWeather()" name="weather" value="weather">
+					GET WEATHER
+				</button>
+				<button onclick="weatherForecast()" name="forecast" value="forecast">
+					Forecast
+				</button>
+				<button onclick="getMenu()" name="menu" value="menu">
+					Cantina Menu
+				</button>
+				<button onclick="manageDOM.clearContent('content')" name="coff" value="coff">
+					CONTENT OFF
+				</button>
+				<button onclick="ftGetObj()" name="student" value="student">
+					GET ME
+				</button>
 			</div>
 		</div>
+		<div class="sidebar" id="right">
+				<link id="right_css" rel="stylesheet" type="text/css" href="">
 		</div>
 	</div>
 	<script src="../js/clock.js"></script>
