moving files from modules to src

--- a/renderer/active.html
+++ b/renderer/active.html
@@ -3,7 +3,7 @@
 	<link rel="stylesheet" type="text/css" href="active.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
-<body onload="dateTime(),getWeather(),loadUser(null)">
+<body onload="dateTime(),getWeather(),loadUser(null),incatvityTime(!null)">
 	<div class="wrapper">
 		<div class="sidebar" id="left">
 				<link id="left_css" rel="stylesheet" type="text/css" href="">
@@ -49,11 +49,12 @@
 				<link id="right_css" rel="stylesheet" type="text/css" href="">
 		</div>
 	</div>
-	<script src="../js/clock.js"></script>
-	<script src="../js/weather.js"></script>
-	<script src="../js/forecast.js"></script>
-	<script src="../js/student.js"></script>
-	<script src="../js/user.js"></script>
-	<script src="../js/cantina.js"></script>
+	<script src="../modules/clock.js"></script>
+	<script src="../modules/weather.js"></script>
+	<script src="../modules/forecast.js"></script>
+	<script src="../modules/student.js"></script>
+	<script src="../modules/user.js"></script>
+	<script src="../modules/cantina.js"></script>
+	<script src="../src/inactive.js"></script>
 </body>
 </html>
