--- a/renderer/main.html
+++ b/renderer/main.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="main.css">
-<script src="../js/jquery.min.js"></script>
+<script src="../src/jquery.min.js"></script>
 </head>
 
 <body onload="dateTime()">
@@ -22,7 +22,7 @@
 			<div class="content" id="clock">
 				<div id="spacer" style="height: 100px"></div>
 				<div onload="validateField()" id="marvin">
-					<img id="marvin_gif" src="https://i.imgur.com/f4J2NfE.gif">
+					<img id="marvin_gif" src="https://media.giphy.com/media/rrVqL0o7pinLy/giphy.gif">
 				</div>
 			</div>
 		</div>
@@ -36,7 +36,7 @@
 		</div>
 		<div></div>
 	</div>
-	<script src="../js/clock.js"></script>	
+	<script src="../modules/clock.js"></script>	
 </body>
 
 </html>
