--- a/renderer/main.html
+++ b/renderer/main.html
@@ -5,7 +5,7 @@
 <script src="../src/jquery.min.js"></script>
 </head>
 
-<body onload="dateTime()">	
+<body onload="dateTime()">
 	<div class="wrapper">
 		<div class="box clock" id="time"></div>
 		<div class="box date" id="date"></div>
@@ -14,9 +14,11 @@
 		</div>
 		<div class="box announcements">
 			<a href="active.html">GO TO ACTIVE</a>
+			<div class="box date" id="date"></div>
+
 		</div>
 	</div>
-	<script src="../modules/clock.js"></script>	
+	<script src="../modules/clock.js"></script>
 </body>
 
 </html>
