--- a/renderer/main.html
+++ b/renderer/main.html
@@ -5,7 +5,7 @@
 <script src="../src/jquery.min.js"></script>
 </head>
 
-<body onload="dateTime()">
+<body onload="dateTime(), fb_post(), slack_post()">
 	<div class="wrapper">
 		<div class="box clock" id="time"></div>
 		<div class="box date" id="date"></div>
@@ -14,11 +14,14 @@
 		</div>
 		<div class="box announcements">
 			<a href="active.html">GO TO ACTIVE</a>
-			<div class="box date" id="date"></div>
-
+			<div class="class posts" id="fb_post"></div>
+			<div class="class posts" id="slack_post"></div>
 		</div>
 	</div>
 	<script src="../modules/clock.js"></script>
+	<script src="../modules/fb_post.js"></script>
+	<script src="../modules/slack_post.js"></script>
+
 </body>
 
 </html>
