--- a/renderer/active.html
+++ b/renderer/active.html
@@ -17,7 +17,6 @@
 			<br />Marvin
 		</div>
 		<div class="box content" id="content">
-            <img id="zone" src="zone" style="display:none;" class="zone"/>
         </div>
 		<div class="box announcements">
 			<form>
@@ -49,16 +48,16 @@
 						GET STUDENT
 				</button>
                     <br><br>
-            <button onclick="zone1()" class="zone1" id="z1"> 
-                    zone1
+            <button onclick="zone(this.id)" id="zone-1"> 
+                    ZONE1
             </button>
-            <button class="zone2" onclick="zone2()" id="z2"> 
+            <button onclick="zone(this.id)" id="zone-2"> 
                     ZONE2
             </button>
-            <button onclick="zone3()" class="zone3" id="z3"> 
+            <button onclick="zone(this.id)" id="zone-3"> 
                     ZONE3
             </button>
-            <button onclick="zone4()" name="map" value="map"> 
+            <button onclick="zone(this.id)" id="zone-4"> 
                     ZONE4
             </button>
 		</div>
