styling updates, still need to sequence queries

--- a/renderer/active.html
+++ b/renderer/active.html
@@ -58,11 +58,19 @@
 				<button onclick="ftAPI.getNewToken()" name="fdb" value="fdb">
 					DEV: GET NEW TOKENS
 				</button>
+				<button onclick="projectFunctions.whoIs()" name="whois" value="whois">
+					DEV: PROJECTS OBJ
+				</button>
+				</button>
+				<button onclick="getPromise()" name="promise" value="promise">
+					DEV: PROMISE
+				</button>
 		</div>
 </div>
 	<script src="../src/ftAPI.js"></script>
 	<script src="../src/mongodb.js"></script>
 	<script src="../modules/clock.js"></script>
+	<script src="../modules/projects.js"></script>
 	<script src="../modules/weather.js"></script>
 	<script src="../modules/forecast.js"></script>
 	<script src="../modules/student.js"></script>
