--- a/renderer/main.html
+++ b/renderer/main.html
@@ -9,9 +9,9 @@
 	<div class="wrapper">
 		<div class="box clock" id="time"></div>
 		<div class="box date" id="date"></div>
-		<div class="box marvin">
+		<!-- <div class="box marvin">
 			<img src="https://media.giphy.com/media/rrVqL0o7pinLy/giphy.gif">
-		</div>
+		</div> -->
 		<div class="box announcements">
 			<a href="active.html">GO TO ACTIVE</a>
 			<div class="class posts" id="fb_post"></div>
