--- a/renderer/active.html
+++ b/renderer/active.html
@@ -20,49 +20,39 @@
         </div>
 		<div class="box announcements">
 			<form>
-					Location:<br>
-					<input type="text" id="location_form"><br>
-					in Celsius (default Fahrenheit)?
-					<input type="checkbox" id="units_form">
-				</form>
-				<button onclick="getWeatherAtLocation()" name="weather" value="weather">
-					GET WEATHER
-				</button>
-				<button onclick="weatherForecast()" name="forecast" value="forecast">
-					Forecast
-				</button> <br /><br />
-				<button onclick="getMenu('today')" name="menu" value="menu">
-					CANTINA TODAY
-				</button>
-				<button onclick="getMenu('tomorrow')" name="menu" value="menu">
-					CANTINA TOMORROW
-				</button><br /><br />
-				<button onclick="manageDOM.clearContent('content')" name="coff" value="coff">
-					CONTENT OFF
-				</button>
-				<button onclick="loadUser(1)" name="user" value="user">
-					GET ME
-				</button>
-				<button onclick="localDateTime()" name="localTime" value="localTime">
-					LocalTime
-				</button>
-				<form>
-					student login:<br>
-					<input type="text" id="student_form">
-				</form>
-				<button onclick="loadStudent()" name="student" value="student">
-					GET STUDENT
-				</button><br /><br />
-				<button onclick="ftAPI.checkTokens()" name="cdb" value="cdb">
-					DEV: CHECK TOKENS
-				</button>
-				<button onclick="ftAPI.getNewToken()" name="fdb" value="fdb">
-					DEV: GET NEW TOKENS
-				</button>
-				<button onclick="" name="whois" value="whois">
-					DEV: PROJECTS OBJ
-				</button>
-                    <br><br>
+				Location:<br>
+				<input type="text" id="location_form"><br>
+				in Celsius (default Fahrenheit)?
+				<input type="checkbox" id="units_form">
+			</form>
+			<button onclick="getWeatherAtLocation()" name="weather" value="weather">
+				GET WEATHER
+			</button>
+			<button onclick="weatherForecast()" name="forecast" value="forecast">
+				Forecast
+			</button> <br /><br />
+			<button onclick="getMenu('today')" name="menu" value="menu">
+				CANTINA TODAY
+			</button>
+			<button onclick="getMenu('tomorrow')" name="menu" value="menu">
+				CANTINA TOMORROW
+			</button><br /><br />
+			<button onclick="manageDOM.clearContent('content')" name="coff" value="coff">
+				CONTENT OFF
+			</button>
+			<button onclick="loadUser(1)" name="user" value="user">
+				GET ME
+			</button>
+			<button onclick="localDateTime()" name="localTime" value="localTime">
+				LocalTime
+			</button>
+			<form>
+				student login:<br>
+				<input type="text" id="student_form">
+			</form>
+			<button onclick="loadStudent()" name="student" value="student">
+				GET STUDENT
+			</button><br/><br/>
             <button onclick="zone(this.id)" id="zone-1"> 
                     ZONE1
             </button>
@@ -76,7 +66,18 @@
                     ZONE4
             </button>
 		</div>
-    
+		<div class="box developer">
+				<button onclick="ftAPI.checkTokens()" name="cdb" value="cdb">
+						DEV: CHECK TOKENS
+					</button>
+					<button onclick="ftAPI.getNewToken()" name="fdb" value="fdb">
+						DEV: GET NEW TOKENS
+					</button>
+					<button onclick="projectFunctions.getProjectsUsersByID()" name="whois" value="whois">
+						DEV: PROJECTS OBJ
+					</button>
+		</div>
+			
 </div>
 	<script src="../src/ftAPI.js"></script>
 	<script src="../src/mongoDB.js"></script>
@@ -85,6 +86,7 @@
 	<script src="../modules/forecast.js"></script>
 	<script src="../modules/student.js"></script>
 	<script src="../modules/user.js"></script>
+	<script src="../modules/projects.js"></script>
 	<script src="../modules/cantina.js"></script>
 	<script src="../modules/map.js"></script>
     <script src="../src/inactive.js"></script>
