changed WOD to fit new DOM schema

--- a/renderer/active.html
+++ b/renderer/active.html
@@ -18,10 +18,8 @@
 			})
 		</script>
 
-<<<<<<< HEAD
 	</head>
 	<body onload="dateTime(),getWeather(),loadUser(null),incatvityTime(!null),connectDB()" id="body">
-=======
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script>
 		require('electron').ipcRenderer.on('todo', (event, message) => {
@@ -34,7 +32,6 @@
 
 		})
 	</script>
->>>>>>> master
 
 		<div class="wrapper">
 			<div class="box clock" id="time"></div>
@@ -171,6 +168,7 @@
 		<script src="../modules/student.js"></script>
 		<script src="../modules/user.js"></script>
 		<script src="../modules/weather.js"></script>
+		<script src="../modules/word_of_a_day.js"></script>
 
 	</body>
 </html>
