--- a/renderer/active.html
+++ b/renderer/active.html
@@ -6,7 +6,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script>
+		<script>
 			require('electron').ipcRenderer.on('todo', (event, message) => {
 				var result = JSON.parse(message)
 				console.log(result.intent)
@@ -19,27 +19,14 @@
 		</script>
 
 	</head>
-	<body onload="dateTime(),getWeather(),loadUser(null),incatvityTime(!null),connectDB()" id="body">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script>
-		require('electron').ipcRenderer.on('todo', (event, message) => {
-			var result = JSON.parse(message)
-			console.log(result.intent)
-			if (result.intent === 'get_weather')
-			{
-				getWeatherAtLocation(result.location, result.units)
-			}
-
-		})
-	</script>
-
+	<body onload="dateTime(),getWeather(),loadUser(),incatvityTime(!null),connectDB()" id="body">
 		<div class="wrapper">
-			<div class="box clock" id="time"></div>
-			<div class="box date" id="date"></div>
-			<div class="box user" id="user"></div>
-			<div class="box weather" id="weather"></div>
-			<div class="box dialog" id="dialog">
+			<div class="dashboard">
+				<div class="box date-time" id="date-time"></div>
+				<div class="box user" id="user"></div>
+				<div class="box weather" id="weather"></div>
 			</div>
+			<div class="box dialog" id="dialog"></div>
 			<div class="box content" id="content">
 			</div>
 
@@ -92,7 +79,7 @@
 			</button>
 			<br /><br />
 			
-			<button onclick="loadUser(1)" name="user" value="user">
+			<button onclick="manageDOM.studentPopup('loadUser')" name="user" value="user">
 				GET ME
 			</button>
 			<button onclick="manageDOM.studentPopup('loadStudent')" name="student" value="student">
@@ -107,16 +94,16 @@
 
 			<br/><br/>
 
-			<button onclick="zone(this.id)" id="zone-1">
+			<button onclick="" id="zone-1">
 				ZONE1
 			</button>
-			<button onclick="zone(this.id)" id="zone-2">
+			<button onclick="" id="zone-2">
 				ZONE2
 			</button>
-			<button onclick="zone(this.id)" id="zone-3">
+			<button onclick="" id="zone-3">
 				ZONE3
 			</button>
-			<button onclick="zone(this.id)" id="zone-4">
+			<button onclick="" id="zone-4">
 				ZONE4
 			</button>
 			
@@ -162,11 +149,8 @@
 		<script src="../modules/corrections.js"></script>
 		<script src="../modules/forecast.js"></script>
 		<script src="../modules/help.js"></script>
-		<script src="../modules/map.js"></script>
-		<script src="../modules/popup.js"></script>
 		<script src="../modules/projects.js"></script>
 		<script src="../modules/student.js"></script>
-		<script src="../modules/user.js"></script>
 		<script src="../modules/weather.js"></script>
 		<script src="../modules/word_of_a_day.js"></script>
 
