some css changes before pulling new files from github

--- a/renderer/main.html
+++ b/renderer/main.html
@@ -11,8 +11,10 @@
 
 <body onload="dateTime(), fb_post(), slack_post()">
 	<div class="wrapper">
-		<div class="box clock" id="time"></div>
-		<div class="box date" id="date"></div>
+		<div class="date-time" id="date-time">
+			<div class="box clock" id="time"></div>
+			<div class="box date" id="date"></div>
+		</div>
 		<!-- <div class="box marvin">
 			<img src="https://media.giphy.com/media/rrVqL0o7pinLy/giphy.gif">
 		</div> -->
