--- a/renderer/main.html
+++ b/renderer/main.html
@@ -9,7 +9,7 @@
 </script>
 </head>
 
-<body onload="dateTime(), fb_post(), slack_post()">
+<body onload="fb_post(), slack_post(), dateTime()">
 	<div class="wrapper">
 		<div class="date-time" id="date-time">
 			<div class="box clock" id="time"></div>
