added wikiDefiniton feature, added time to fb and slack posts and tiny fb fix

--- a/renderer/active.html
+++ b/renderer/active.html
@@ -74,7 +74,7 @@
 				get word
 			</button>
 			<br /><br />
-			
+
 			<button onclick="manageDOM.studentPopup('v2Users.userInfo')" name="user" value="user">
 				GET ME
 			</button>
@@ -148,6 +148,8 @@
 		<script src="../modules/maps.js"></script>
 		<script src="../src/controller.js"></script>
 		<script src="../modules/word_of_a_day.js"></script>
+		<script src="../modules/wikiDefinition.js"></script>
+
 
 	</body>
 </html>
