consolidated mainWindow and mainjs, added db functionality to fb_post (still needs work)

--- a/renderer/active.html
+++ b/renderer/active.html
@@ -125,6 +125,9 @@
 					<button onclick="showMenu()" name="devCantina" value="devCantina">
 						DEV: CANTINA MONGO
 					</button>
+					<button onclick="projectFunctions.getProjectsTeams()" name="lst" value="lst">
+						DEV: ROTATING DEV OPTION
+					</button>
 		</div>
 
 		<script src="../src/card_reader.js"></script>
