adding a lot of changes for one page

--- a/renderer/active.html
+++ b/renderer/active.html
@@ -13,7 +13,7 @@
 		</script>
 
 	</head>
-	<body onload="fb_post(), slack_post(), dateTime(),getWeather(),v2Users.userInfo(),incatvityTime(!null),connectDB(),gif()" id="body">
+	<body onload="fb_post(), slack_post(), dateTime(), incatvityTime(!null), connectDB()" id="body">
 		<div class="wrapper">
 			<div class="dashboard">
 				<div class="box date-time" id="date-time"></div>
