added a dev button to test correction functions, fixed popup timer, looking to add local time for forecast

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -51,6 +51,7 @@
 		<script src="../modules/corrections.js"></script>
 		<script src="../src/auto_update.js"></script>
 		<script src="../src/inactive.js"></script>
-		<script src="../src/mongoDB.js"></script>
+        <script src="../src/mongoDB.js"></script>
+        <button onclick="devLoadCorrections()">Scale Teams</button>
     </body>
 </html>
