Fixed timezones for forecast and added processing gif where needed

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -45,7 +45,6 @@
         </div>
         <script src="../modules/clock.js"></script>
         <script src="../modules/fb_post.js"></script>
-        <script src="../modules/forecast.js"></script><!--/////////////////////-->
         <script src="../modules/slack_post.js"></script>
 		<script src="../modules/maps.js"></script>
 		<script src="../modules/student.js"></script>
@@ -54,6 +53,6 @@
 		<script src="../src/auto_update.js"></script>
 		<script src="../src/inactive.js"></script>
         <script src="../src/mongoDB.js"></script>
-        <!-- <button onclick="clock.localDateTime('Phoenix')">Scale Teams</button> -->
+        <button onclick="manageDOM.studentPopup(projectFunctions.getBestProjects)">Scale Teams</button>
     </body>
 </html>
