Made css more developer-friendly by converting to sass

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -2,26 +2,7 @@
 <html>
     <head>
         <!-- MAIN STYLE SHEET -->
-        <!-- <link rel="stylesheet" type="text/css" href="../css/styles.css"> -->
-
-        <!-- DEV STYLE SHEETS -->
-        <link rel="stylesheet" type="text/css" href="../dev-css/announcements.css">
-        <link rel="stylesheet" type="text/css" href="../dev-css/author.css">
-        <link rel="stylesheet" type="text/css" href="../dev-css/base.css">
-        <link rel="stylesheet" type="text/css" href="../dev-css/cantina.css">
-        <link rel="stylesheet" type="text/css" href="../dev-css/clock.css">
-        <link rel="stylesheet" type="text/css" href="../dev-css/corrections.css">
-        <link rel="stylesheet" type="text/css" href="../dev-css/dictionary.css">
-        <link rel="stylesheet" type="text/css" href="../dev-css/forecast.css">
-        <link rel="stylesheet" type="text/css" href="../dev-css/help.css">
-        <link rel="stylesheet" type="text/css" href="../dev-css/maps.css">
-        <link rel="stylesheet" type="text/css" href="../dev-css/projects.css">
-        <link rel="stylesheet" type="text/css" href="../dev-css/student.css">
-        <link rel="stylesheet" type="text/css" href="../dev-css/weather.css">
-        <link rel="stylesheet" type="text/css" href="../dev-css/wiki.css">
-        <link rel="stylesheet" type="text/css" href="../dev-css/news.css">
-
-        <link rel="stylesheet" href="../css/fullcalendar.css">
+        <link rel="stylesheet" type="text/css" href="../css/stylenpm tar.css">
 
         <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
         <!--script src="/src/jquery.min.js"></script-->
