--- a/renderer/index.html
+++ b/renderer/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <!-- MAIN STYLE SHEET -->
-        <link rel="stylesheet" type="text/css" href="../css/stylenpm tar.css">
+        <link rel="stylesheet" type="text/css" href="../css/style.css">
 
         <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
         <!--script src="/src/jquery.min.js"></script-->
@@ -34,6 +34,6 @@
 		<script src="../src/auto_update.js"></script>
 		<script src="../src/inactive.js"></script>
         <script src="../src/mongoDB.js"></script>
-        <button onclick="manageDOM.studentPopup(projectFunctions.getBestProjects)">Scale Teams</button>
+        <!-- <button onclick="updateNow()">Scale Teams</button> -->
     </body>
 </html>
